# mahjong-ce

./: .gitignore  CMakeLists.txt  README.md  makefile
importer/: kyodai.py
importer/kyodai_pack/: Another Round.lay  Aqab's.lay  Arena.lay  Beatle.lay  Big Hole.lay  Big Mountain.lay  Bizarre.lay  Boat.lay  Bridge.lay  Butterfly.lay  Castle.lay  Cat and Mouse.lay  Ceremonial.lay  ChessMania.lay  Cross.lay  Crown.lay  Cupido's Heart.lay  Cupola.lay  Deep Well.lay  Diamond.lay  Dude.lay  Empty Pyramids.lay  Farandole.lay  Fish face.lay  Fish.lay  Five Pyramids 2.lay  Five Pyramids.lay  Floating City.lay  Flowers.lay  Full Vision 2.lay  Full Vision 3.lay  Full Vision.lay  H for Haga.lay  Hidden Words.lay  Hourglass.lay  Hovercraft.lay  Hurdles.lay  Hurricane.lay  IloveU.lay  Inazuma.lay  (+94 more)
src/: game.h  gfx.c  gfx.h  layouts.h  logic.c  logic.h  main.c  storage.c  storage.h  tile.c  tile.h  ui.c  ui.h  util.c  util.h
src/gfx/: convpng.ini  tilemap.c  tilemap.xcf  tiles_gfx.c  tiles_gfx.h
src/layouts/: easy.c
